# tissue

./: .gitignore  Cargo.toml  README.md
src/: app.rs  args.rs  config.rs  health.rs  lib.rs  main.rs  metadata.rs
src/config/: editor.rs  language.rs  syntax.rs  syntax.toml
tissue-tui/: Cargo.toml
