[workspace]
members = [
  "tissue-tui",
]

[workspace.package]
authors = ["David Park <dpjungmin@gmail.com>"]
description = "A lightweight code-editor"
edition = "2021"
rust-version = "1.68"

[workspace.dependencies]
anyhow = "1"
crossterm = { version = "0.26", features = ["event-stream"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
etcetera = "0.4"
fern = "0.6"
log = "0.4"
serde = { version = "1", features = ["derive"] }
termimad = "0.21"
tokio = { version = "1", features = ["full"] }
toml = "0.7"
which = "4"

[package]
name = "tissue"
version = "0.1.0"
description = { workspace = true }
authors = { workspace = true }
license = "MIT"
repository = "https://github.com/dpjungmin/tissue"
edition = { workspace = true }
rust-version = { workspace = true }

[[bin]]
name = "tis"
path = "src/main.rs"
test = false
doctest = false

[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true }
etcetera = { workspace = true }
termimad = { workspace = true }
tokio = { workspace = true }
which = { workspace = true }

# logging
chrono = { workspace = true }
fern = { workspace = true }
log = { workspace = true }

# configuration
serde = { workspace = true }
toml = { workspace = true }

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1
build-override = { opt-level = 3 }
